--- a/res/index.html
+++ b/res/index.html
@@ -19,6 +19,8 @@
                 <span class="link" id="dialogbtn">Set Coundown</span>
                 &nbsp;
                 <span class="link" id="clearbtn">Clear Countdown</span>
+                &nbsp;
+                <span class="link" id="dvd">DVD</span>
             </div>
             <div class="flexcell" style="text-align: center;">clock.nzbr.de</div>
             <div class="flexcell" style="text-align: right;">
